Fix odd spacing in header menu.

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -32,11 +32,11 @@ nav[role="navigation"] {
 				>div {
 					position: absolute;
 					@include cssTriangle(11px, rgba(0,0,0,.3), top);
-					left: 10px;
+					left: 9px;
 					&:last-child {
 						position: absolute;
 						@include cssTriangle(10px, $teal, top);
-						left: 11px;
+						left: 10px;
 					}
 				}
 			}
@@ -49,6 +49,7 @@ nav[role="navigation"] {
 				text-align: center;
 				&:before {
 					@extend .glyph.general;
+					@include text-shadow(-1px, -1px, 1px, 0, $black);
 				}
 			}
 		}
@@ -57,6 +58,11 @@ nav[role="navigation"] {
 			color: $white;
 			display: block;
 			padding: 7px 8px;
+			// text-shadow($shadow-1, $shadow-2, $shadow-3, $shadow-4, $shadow-5, $shadow-6, $shadow-7, $shadow-8, $shadow-9, $shadow-10);
+			// single-text-shadow($hoff, $voff, $blur, $spread, $color)
+			span {
+				@include text-shadow(rgba($black, 0.2) 1px 1px 0);
+			}
 		}
 		#build i:before {
 			content: "k";
